Added JVM arguments to suppress warning messages