@@ -86,6 +86,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <jvmArguments>--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow</jvmArguments>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
@@ -110,7 +111,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                    <argLine>-Xshare:off -XX:+EnableDynamicAgentLoading</argLine>
                     <includes>
                         <include>**/*UnitTest.java</include>
                     </includes>
@@ -128,7 +129,7 @@
                             <goal>integration-test</goal>
                         </goals>
                         <configuration>
-                            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                            <argLine>-Xshare:off -XX:+EnableDynamicAgentLoading</argLine>
                             <includes>
                                 <include>**/*IntegrationTest.java</include>
                             </includes>
